test/modules/sungeun/no-use-call-function.good
no-use-call-function.chpl:8: In function 'main':
no-use-call-function.chpl:9: error: 'X' undeclared (first use this function)
no-use-call-function.chpl:10: error: 'Z' undeclared (first use this function)
